src/styles.css
:root {
	background-color: whitesmoke;

	--basic-color: #4a4a4a;
	--error-color: #f00000;
	--brackets-color: yellowgreen;

	--left-brackets: "[ ";
	--right-brackets: " ]";
	--separator: ", ";
}

article.message {
	margin-top: 7.5vh;
}

.App {
	font-family: sans-serif;
	text-align: center;

	padding: 2rem;
}

.array {
	padding: 0;
	margin: 2rem 5rem;

	display: flex;
	flex-flow: column wrap;
	justify-content: center;
	align-items: center;
	flex-wrap: nowrap;
}

.array h3 {
	font-size: 2rem;
	text-align: center;
	padding-block-end: 1rem;
}

.array .array-box {
	display: flex;
	flex-flow: row wrap;
	justify-content: center;
	flex: none;

	border: 5px var(--basic-color);
	border-style: dashed solid;

	width: max-content;
}

.array.error .array-box {
	box-shadow: 0 0 20px 15px var(--error-color);
}

.array.error .array-box {
	border: 5px var(--error-color);
	border-style: dashed;
}

.help[data-error="true"] {
	text-decoration-line: underline;
	color: var(--error-color);
}

.array .array-item {
	margin: 0px;
	padding: 1vmin 2.5vmin;

	background-color: white;
	color: #3273dc;

	text-align: center;

	font-size: 2.75rem;
	font-weight: bold;

	transition: all 0.25s ease-out;

	opacity: 0;
	animation: show 2s 1 forwards;
}

.array .array-item:not(:last-child)::after {
	content: var(--separator);
	color: rebeccapurple;
}

.array .array-item:first-child::before {
	content: var(--left-brackets);
	color: var(--brackets-color);
}

.array .array-item:last-child::after {
	content: var(--right-brackets);
	color: var(--brackets-color);
}

.array-item:not(.result):not(.active):hover {
	transform: scale(1.25);
	outline: 5px dashed var(--basic-color);
	color: blueviolet;
	z-index: 1;
	transition: all 0.25s easy-out;
}

.array.error .array-item:hover {
	outline: 5px dashed var(--error-color);
}

.array-item.active {
	transform: scale(1.25);
	outline: 5px dotted var(--basic-color);
	color: crimson;
	z-index: 2;
	transition: all 0.25s easy-out;
}

.array-item.left,
.array-item.right {
	filter: blur(1.5px);
	z-index: 1;
	transition: filter 0.1s ease-out;
}

/*
.array-item.result {
	color: firebrick;
	transform: scale(1.75) rotate(720deg);
	background-color: yellowgreen;
	z-index: 1;
	border-radius: 200px 135px 30px 114px;
	box-shadow: 0 0 5px black;

	translate: transform 1s ease-in;
}
*/

.array-item.result {
	transform: scale(1.5) rotate(720deg) translateY(20px);
	outline: 4px dotted var(--basic-color);
	z-index: 1;
	color: yellowgreen;

	translate: transform 1s ease-out;
}

@keyframes show {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

